Fix spacing on tutorial

--- a/src/Components/Tutorial/Tutorial.css
+++ b/src/Components/Tutorial/Tutorial.css
@@ -5,6 +5,7 @@
 
 .tutorial-popup {
   position: relative;
+  max-height: 75vh;
 }
 
 .tutorial-back-btn {
